Logo update - Some SEO updates - Added baseUrl to be used in cloudflare redirection - Changed Roboto to be the main font - Using google cdn for roboto font

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,5 @@
 {
-    "home.body.title": "AnimeNew Season Guide",
+    "home.body.title": "AnimeNew's Anime Season Guide",
     "home.body.subtitle": "Explore Anime Seasons on AnimeNew: Releases, Timetables, and Summaries",
     "input.error-message": "This field cannot be empty",
     "home.body.tv": "TV",
