Created character page (#24)
- Added .cpanel deploy config
- Added more i18n locales

--- a/locales/en.json
+++ b/locales/en.json
@@ -19,6 +19,10 @@
     "media.watch": "Watch",
     "media.staff": "Staff",
     "media.no-image": "No image",
+    "media.episode": "Episode",
+    "media.episode.of": "of",
+    "media.synopsis": "Synopsis",
+    "character.about": "About",
     "relation.adaptation": "Adaptation",
     "relation.alternative": "Alternative",
     "relation.character": "Character",
