--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -19,6 +19,10 @@
     "media.watch": "Assista",
     "media.staff": "Staff",
     "media.no-image": "Sem imagem",
+    "media.episode": "Episódio",
+    "media.episode.of": "de",
+    "media.synopsis": "Sinopse",
+    "character.about": "Sobre",
     "relation.adaptation": "Adaptação",
     "relation.alternative": "Alternativa",
     "relation.character": "Personagem",
