Replaced Watch section with News section - Edited Nuxt Config to use vite when building

--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -22,6 +22,7 @@
     "media.episode": "Episódio",
     "media.episode.of": "de",
     "media.synopsis": "Sinopse",
+    "media.news.about": "Notícias sobre",
     "character.about": "Sobre",
     "relation.adaptation": "Adaptação",
     "relation.alternative": "Alternativa",
