--- a/locales/en.json
+++ b/locales/en.json
@@ -22,6 +22,7 @@
     "media.episode": "Episode",
     "media.episode.of": "of",
     "media.synopsis": "Synopsis",
+    "media.news.about": "News",
     "character.about": "About",
     "relation.adaptation": "Adaptation",
     "relation.alternative": "Alternative",
