Added adsense, edited alignement and texts

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,6 +1,6 @@
 {
-    "home.body.title": "AnimeNew's Anime Season Guide",
-    "home.body.subtitle": "Explore Anime Seasons on AnimeNew: Releases, Timetables, and Summaries",
+    "home.body.title": "Animes Season Guide",
+    "home.body.subtitle": "Check out this year's biggest anime releases! Get the latest schedules, synopses, and official premiere dates.",
     "input.error-message": "This field cannot be empty",
     "home.body.tv": "TV",
     "home.body.tv-shorts": "TV SHORTS",
