--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -1,6 +1,6 @@
 {
-    "home.body.title": "Guia de Temporadas de Anime do AnimeNew",
-    "home.body.subtitle": "Explore as Temporadas de Anime no AnimeNew: Lançamentos, Horários e Resumos",
+    "home.body.title": "Lista de Animes da Temporada",
+    "home.body.subtitle": "Confira os principais lançamentos de animes do ano: horários, sinopses e datas de estreia oficiais.",
     "input.error-message": "Este campo não pode estar vazio",
     "home.body.tv": "TV",
     "home.body.tv-shorts": "CURTAS DE TV",
