--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,9 @@
 {
+    "navbar.news": "News",
+    "navbar.animes": "Animes",
+    "navbar.mangas": "Mangas",
+    "navbar.games": "Games",
+    "navbar.cinema": "Cinema",
     "home.body.title": "Animes Season Guide",
     "home.body.subtitle": "Check out this year's biggest anime releases! Get the latest schedules, synopses, and official premiere dates.",
     "input.error-message": "This field cannot be empty",
@@ -25,6 +30,7 @@
     "media.news.about": "News",
     "character.about": "About",
     "staff.about": "About",
+    "studio.about": "About",
     "relation.adaptation": "Adaptation",
     "relation.alternative": "Alternative",
     "relation.character": "Character",
@@ -52,7 +58,11 @@
     "season.fall": "FALL",
     "tba": "To be announced",
     "search": "Search",
+    "search.placeholder": "Search Animes, Mangas ...",
     "results": "Results",
     "anime": "Anime",
-    "search.empty": "No results found"
+    "search.empty": "No results found",
+    "studio.established": "Established",
+    "studio.links": "Links",
+    "studio.related": "Related"
 }
