--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -1,4 +1,9 @@
 {
+    "navbar.news": "Notícias",
+    "navbar.animes": "Animes",
+    "navbar.mangas": "Mangás",
+    "navbar.games": "Jogos",
+    "navbar.cinema": "Cinema",
     "home.body.title": "Lista de Animes da Temporada",
     "home.body.subtitle": "Confira os principais lançamentos de animes do ano: horários, sinopses e datas de estreia oficiais.",
     "input.error-message": "Este campo não pode estar vazio",
@@ -25,6 +30,7 @@
     "media.news.about": "Notícias sobre",
     "character.about": "Sobre",
     "staff.about": "Sobre",
+    "studio.about": "Sobre",
     "relation.adaptation": "Adaptação",
     "relation.alternative": "Alternativa",
     "relation.character": "Personagem",
@@ -52,7 +58,11 @@
     "season.fall": "OUTONO",
     "tba": "Ainda não anunciado",
     "search": "Pesquisar",
+    "search.placeholder": "Buscar Animes, Mangas ...",
     "results": "Resultados",
     "anime": "Anime",
-    "search.empty": "Nenhum resultado encontrado"
+    "search.empty": "Nenhum resultado encontrado",
+    "studio.established": "Criado em",
+    "studio.links": "Links",
+    "studio.related": "Relacionados"
 }
