Ui revamp and mobile friendly added

--- a/locales/en.json
+++ b/locales/en.json
@@ -10,16 +10,16 @@
     "home.body.tv": "TV",
     "home.body.tv-shorts": "TV SHORTS",
     "home.body.movies": "MOVIES",
-    "home.body.in-progress": "IN PROGRESS",
+    "home.body.in-progress": "STILL IN PROGRESS",
     "home.body.specials": "SPECIALS",
     "home.body.nothing-found": "No anime found yet for the selected season",
     "winter": "WINTER",
     "spring": "SPRING",
     "summer": "SUMMER",
     "fall": "FALL",
-    "button.about": "Learn More",
+    "button.about": "Learn more",
     "media.studio": "Studio",
-    "media.related": "Related Content",
+    "media.related": "Related content",
     "media.characters": "Characters",
     "media.watch": "Watch",
     "media.staff": "Staff",
@@ -27,7 +27,29 @@
     "media.episode": "Episode",
     "media.episode.of": "of",
     "media.synopsis": "Synopsis",
-    "media.news.about": "News",
+    "media.news.about": "News about",
+    "media.genre": "Genre",
+    "media.format": "Format",
+    "media.episodes": "Episodes",
+    "media.duration": "Duration",
+    "media.status": "Status",
+    "media.season": "Season",
+    "media.score": "Score",
+    "media.studios": "Studios",
+    "media.information": "Information",
+    "media.format.all": "All",
+    "media.format.other": "Other",
+    "media.format.manga": "Manga",
+    "media.format.movie": "Movie",
+    "media.format.music": "Music",
+    "media.format.novel": "Light Novel",
+    "media.format.ona": "ONA",
+    "media.format.one_shot": "One Shot",
+    "media.format.ova": "OVA",
+    "media.format.special": "Special",
+    "media.format.tv": "TV",
+    "media.format.tv_short": "TV Short",
+    "media.format.unknown": "Unknown",
     "character.about": "About",
     "staff.about": "About",
     "studio.about": "About",
@@ -40,10 +62,11 @@
     "relation.parent": "Original",
     "relation.prequel": "Prequel",
     "relation.sequel": "Sequel",
-    "relation.side_story": "Side Story",
+    "relation.side_story": "Side story",
     "relation.source": "Source",
-    "relation.spin_off": "Spin-Off",
+    "relation.spin_off": "Spin-off",
     "relation.summary": "Summary",
+    "status.all": "All",
     "status.cancelled": "Cancelled",
     "status.finished": "Finished",
     "status.hiatus": "On Hiatus",
@@ -62,7 +85,8 @@
     "results": "Results",
     "anime": "Anime",
     "search.empty": "No results found",
-    "studio.established": "Established",
+    "search.error": "This field cannot be empty",
+    "studio.established": "Established in",
     "studio.links": "Links",
     "studio.related": "Related"
 }
