--- a/locales/es.json
+++ b/locales/es.json
@@ -4,33 +4,55 @@
     "navbar.mangas": "Mangas",
     "navbar.games": "Juegos",
     "navbar.cinema": "Cine",
-    "home.body.title": "Guía de Temporadas de Animes",
-    "home.body.subtitle": "¡Descubre los mayores estrenos de anime de este año! Obtén los horarios más recientes, sinopsis y fechas oficiales de estreno.",
+    "home.body.title": "Lista de Animes de la Temporada",
+    "home.body.subtitle": "Consulta los principales estrenos de animes del año: horarios, sinopsis y fechas oficiales de estreno.",
     "input.error-message": "Este campo no puede estar vacío",
     "home.body.tv": "TV",
     "home.body.tv-shorts": "CORTOS DE TV",
     "home.body.movies": "PELÍCULAS",
     "home.body.in-progress": "EN PROGRESO",
     "home.body.specials": "ESPECIALES",
-    "home.body.nothing-found": "No se encontraron animes para la temporada seleccionada",
+    "home.body.nothing-found": "Aún no se han encontrado animes para la temporada seleccionada",
     "winter": "INVIERNO",
     "spring": "PRIMAVERA",
     "summer": "VERANO",
     "fall": "OTOÑO",
     "button.about": "Saber más",
     "media.studio": "Estudio",
-    "media.related": "Contenido Relacionado",
+    "media.related": "Contenido relacionado",
     "media.characters": "Personajes",
     "media.watch": "Ver",
-    "media.staff": "Personal",
+    "media.staff": "Staff",
     "media.no-image": "Sin imagen",
     "media.episode": "Episodio",
     "media.episode.of": "de",
     "media.synopsis": "Sinopsis",
-    "media.news.about": "Noticias",
-    "character.about": "Sobre",
-    "staff.about": "Sobre",
-    "studio.about": "Sobre",
+    "media.news.about": "Noticias sobre",
+    "media.genre": "Género",
+    "media.format": "Formato",
+    "media.episodes": "Episodios",
+    "media.duration": "Duración",
+    "media.status": "Estado",
+    "media.season": "Temporada",
+    "media.score": "Puntuación",
+    "media.studios": "Estudios",
+    "media.information": "Información",
+    "media.format.all": "Todos",
+    "media.format.other": "Otro",
+    "media.format.manga": "Manga",
+    "media.format.movie": "Película",
+    "media.format.music": "Música",
+    "media.format.novel": "Novela ligera",
+    "media.format.ona": "ONA",
+    "media.format.one_shot": "One Shot",
+    "media.format.ova": "OVA",
+    "media.format.special": "Especial",
+    "media.format.tv": "TV",
+    "media.format.tv_short": "TV corta",
+    "media.format.unknown": "Desconocido",
+    "character.about": "Acerca de",
+    "staff.about": "Acerca de",
+    "studio.about": "Acerca de",
     "relation.adaptation": "Adaptación",
     "relation.alternative": "Alternativa",
     "relation.character": "Personaje",
@@ -40,29 +62,31 @@
     "relation.parent": "Original",
     "relation.prequel": "Precuela",
     "relation.sequel": "Secuela",
-    "relation.side_story": "Historia Lateral",
+    "relation.side_story": "Historia paralela",
     "relation.source": "Fuente",
-    "relation.spin_off": "Spin-Off",
+    "relation.spin_off": "Derivada",
     "relation.summary": "Resumen",
+    "status.all": "Todos",
     "status.cancelled": "Cancelado",
     "status.finished": "Finalizado",
-    "status.hiatus": "En Hiato",
-    "status.not_yet_released": "No Lanzado Aún",
-    "status.releasing": "Lanzándose",
-    "role.background": "Fondo",
-    "role.main": "Principal",
-    "role.supporting": "Secundario",
+    "status.hiatus": "En pausa",
+    "status.not_yet_released": "Aún no lanzado",
+    "status.releasing": "En emisión",
+    "role.background": "Secundario",
+    "role.main": "Protagonista",
+    "role.supporting": "Coprotagonista",
     "season.winter": "INVIERNO",
     "season.spring": "PRIMAVERA",
     "season.summer": "VERANO",
     "season.fall": "OTOÑO",
-    "tba": "Por anunciar",
+    "tba": "Aún no anunciado",
     "search": "Buscar",
     "search.placeholder": "Buscar Animes, Mangas ...",
     "results": "Resultados",
     "anime": "Anime",
     "search.empty": "No se encontraron resultados",
-    "studio.established": "Creado en",
+    "search.error": "Este campo no puede estar vacío",
+    "studio.established": "Fundado en",
     "studio.links": "Enlaces",
     "studio.related": "Relacionados"
 }
