--- a/locales/ja.json
+++ b/locales/ja.json
@@ -4,65 +4,89 @@
     "navbar.mangas": "マンガ",
     "navbar.games": "ゲーム",
     "navbar.cinema": "映画",
-    "home.body.title": "アニメシーズンガイド",
-    "home.body.subtitle": "今年の最も注目すべきアニメのリリースをチェック！最新のスケジュール、あらすじ、公式のプレミア日程をご覧ください。",
+    "home.body.title": "今季のアニメリスト",
+    "home.body.subtitle": "今年の主なアニメのリリース情報をチェック：スケジュール、あらすじ、公式な放送日など。",
     "input.error-message": "このフィールドは空にできません",
     "home.body.tv": "テレビ",
     "home.body.tv-shorts": "テレビショート",
     "home.body.movies": "映画",
     "home.body.in-progress": "進行中",
-    "home.body.specials": "特別編",
-    "home.body.nothing-found": "選択したシーズンにアニメは見つかりません",
+    "home.body.specials": "スペシャル",
+    "home.body.nothing-found": "選択されたシーズンに一致するアニメが見つかりませんでした",
     "winter": "冬",
     "spring": "春",
     "summer": "夏",
     "fall": "秋",
-    "button.about": "もっと詳しく",
+    "button.about": "詳細を見る",
     "media.studio": "スタジオ",
     "media.related": "関連コンテンツ",
     "media.characters": "キャラクター",
-    "media.watch": "視聴",
+    "media.watch": "視聴する",
     "media.staff": "スタッフ",
     "media.no-image": "画像なし",
     "media.episode": "エピソード",
-    "media.episode.of": "の",
+    "media.episode.of": "/",
     "media.synopsis": "あらすじ",
-    "media.news.about": "ニュース",
-    "character.about": "について",
-    "staff.about": "について",
-    "studio.about": "について",
-    "relation.adaptation": "アダプテーション",
-    "relation.alternative": "代替",
+    "media.news.about": "に関するニュース",
+    "media.genre": "ジャンル",
+    "media.format": "フォーマット",
+    "media.episodes": "話数",
+    "media.duration": "時間",
+    "media.status": "ステータス",
+    "media.season": "シーズン",
+    "media.score": "スコア",
+    "media.studios": "スタジオ",
+    "media.information": "情報",
+    "media.format.all": "すべて",
+    "media.format.other": "その他",
+    "media.format.manga": "マンガ",
+    "media.format.movie": "映画",
+    "media.format.music": "ミュージックビデオ",
+    "media.format.novel": "ライトノベル",
+    "media.format.ona": "ONA（ネット配信アニメ）",
+    "media.format.one_shot": "ワンショット",
+    "media.format.ova": "OVA（オリジナルビデオアニメ）",
+    "media.format.special": "スペシャル",
+    "media.format.tv": "テレビアニメ",
+    "media.format.tv_short": "テレビショート",
+    "media.format.unknown": "不明",
+    "character.about": "キャラクター概要",
+    "staff.about": "スタッフ概要",
+    "studio.about": "スタジオ概要",
+    "relation.adaptation": "原作",
+    "relation.alternative": "代替バージョン",
     "relation.character": "キャラクター",
-    "relation.compilation": "コンピレーション",
+    "relation.compilation": "総集編",
     "relation.contains": "含む",
     "relation.other": "その他",
-    "relation.parent": "オリジナル",
+    "relation.parent": "親作品",
     "relation.prequel": "前日譚",
     "relation.sequel": "続編",
     "relation.side_story": "サイドストーリー",
     "relation.source": "出典",
     "relation.spin_off": "スピンオフ",
-    "relation.summary": "概要",
-    "status.cancelled": "キャンセル",
-    "status.finished": "終了",
-    "status.hiatus": "休止中",
-    "status.not_yet_released": "まだリリースされていません",
+    "relation.summary": "要約",
+    "status.all": "すべて",
+    "status.cancelled": "中止",
+    "status.finished": "完結",
+    "status.hiatus": "一時停止",
+    "status.not_yet_released": "未公開",
     "status.releasing": "放送中",
     "role.background": "背景",
-    "role.main": "メイン",
-    "role.supporting": "サポート",
+    "role.main": "主役",
+    "role.supporting": "脇役",
     "season.winter": "冬",
     "season.spring": "春",
     "season.summer": "夏",
     "season.fall": "秋",
-    "tba": "発表予定",
+    "tba": "後日発表",
     "search": "検索",
-    "search.placeholder": "アニメ、マンガを検索…",
-    "results": "結果",
+    "search.placeholder": "アニメ、マンガを検索...",
+    "results": "検索結果",
     "anime": "アニメ",
-    "search.empty": "結果が見つかりません",
-    "studio.established": "設立",
+    "search.empty": "検索結果が見つかりませんでした",
+    "search.error": "このフィールドは空にできません",
+    "studio.established": "設立年",
     "studio.links": "リンク",
-    "studio.related": "関連"
+    "studio.related": "関連作品"
 }
