--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -28,6 +28,28 @@
     "media.episode.of": "de",
     "media.synopsis": "Sinopse",
     "media.news.about": "Notícias sobre",
+    "media.genre": "Gênero",
+    "media.format": "Formato",
+    "media.episodes": "Episódios",
+    "media.duration": "Duração",
+    "media.status": "Status",
+    "media.season": "Temporada",
+    "media.score": "Nota",
+    "media.studios": "Estúdios",
+    "media.information": "Informação",
+    "media.format.all": "Todos",
+    "media.format.other": "Outro",
+    "media.format.manga": "Mangá",
+    "media.format.movie": "Filme",
+    "media.format.music": "Música",
+    "media.format.novel": "Light Novel",
+    "media.format.ona": "ONA",
+    "media.format.one_shot": "One Shot",
+    "media.format.ova": "OVA",
+    "media.format.special": "Especial",
+    "media.format.tv": "TV",
+    "media.format.tv_short": "Curta de TV",
+    "media.format.unknown": "Desconhecido",
     "character.about": "Sobre",
     "staff.about": "Sobre",
     "studio.about": "Sobre",
@@ -44,6 +66,7 @@
     "relation.source": "Fonte",
     "relation.spin_off": "Derivada",
     "relation.summary": "Resumo",
+    "status.all": "Todos",
     "status.cancelled": "Cancelado",
     "status.finished": "Finalizado",
     "status.hiatus": "Em Hiato",
@@ -62,6 +85,7 @@
     "results": "Resultados",
     "anime": "Anime",
     "search.empty": "Nenhum resultado encontrado",
+    "search.error": "Este campo não pode estar vazio",
     "studio.established": "Criado em",
     "studio.links": "Links",
     "studio.related": "Relacionados"
